# hele-shaw

./: .gitignore  1.avi  :w  Cargo.toml  README.md  Untitled1.ipynb  config.toml  foo.csv  Анализ.ipynb  Без названия.ipynb  запуск.ipynb
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  Без названия-checkpoint.ipynb  запуск-checkpoint.ipynb
1/: config.tmol
src/: equations.rs  main.rs
